JOORSAND/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Integration_Quote__c</fullName>
        <description>Takes inputs from the Pricing Matrix fields and returns a suggested price for integration.</description>
        <formula>CASE(TEXT(Full_Integration__c),
&quot;New Flat File&quot;, 7500,
&quot;Pre-Built Flat File&quot;, 5000,
&quot;New API&quot;, 2000,
&quot;Pre-Built API&quot;, 1000,
&quot;API&quot;, 1500,
&quot;Sync Suite (all flat file)&quot;, 7500,
&quot;RLM&quot;, 4000,
&quot;AIMS&quot;, 1500,
&quot;Kellwood API&quot;, 1500,
&quot;Order JOINT&quot;, 1500,
&quot;EDI 850&quot;, 1500,
0)
+
IF(TEXT(Order_Export_Sync__c) = &quot;Order Export&quot;, 1500, IF(TEXT(Order_Export_Sync__c) = &quot;Order Export w/o FTP&quot;, 1000, 0))
+
IF(TEXT(Inventory_Sync__c) = &quot;Inventory Sync&quot;, 1500, 0)
+
IF(TEXT(Style_Sync__c) = &quot;Style Sync&quot;, 2500, 0)
+
IF(TEXT(Customer_Sync__c) = &quot;Customer Sync&quot;, 2500, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The suggested integration fee for this customer per the Pricing Matrix.</inlineHelpText>
        <label>Integration Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <description>Indicates how the partner will integrate their product catalogue.</description>
        <inlineHelpText>How will this partner integrate their product catalogue?</inlineHelpText>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat File</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <description>The integrations this partner would use.</description>
        <inlineHelpText>Which integrations will this partner use?</inlineHelpText>
        <label>Integration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Items</fullName>
                </value>
                <value>
                    <fullName>Styles</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Size Curves</fullName>
                </value>
                <value>
                    <fullName>Budgets</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Assortments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrations_Product_Present__c</fullName>
        <description>Counts how many integrations products are in the Opportunity. Used to fire alert to integrations team.</description>
        <label>Integrations Product Present</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Code__c</field>
            <operation>equals</operation>
            <value>JOOR_Service_Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inventory_Sync__c</fullName>
        <inlineHelpText>Select N/A if Full Integration.</inlineHelpText>
        <label>Inventory Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Inventory Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FINANCE ONLY</inlineHelpText>
        <label>Invoice Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FINANCE ONLY</inlineHelpText>
        <label>Invoice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JOOR_Test_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>JOOR Test Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (JOOR Test Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Reason_Details__c</fullName>
        <description>Additional context for Loss Reason.</description>
        <inlineHelpText>Use this to provide more detail on the Loss Reason.</inlineHelpText>
        <label>Loss Reason Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cannot Afford</fullName>
                    <label>Like Product but Cannot Afford</label>
                </value>
                <value>
                    <fullName>First Meeting Canceled / No Show</fullName>
                </value>
                <value>
                    <fullName>Integration Gap</fullName>
                </value>
                <value>
                    <fullName>KPIs Not Aligned</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Adoption</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                    <label>Don&apos;t See Value</label>
                </value>
                <value>
                    <fullName>Product Gap</fullName>
                </value>
                <value>
                    <fullName>Pulling Out of Wholesale</fullName>
                </value>
                <value>
                    <fullName>Showroom Swap</fullName>
                </value>
                <value>
                    <fullName>Switch to In-House System</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_ARR__c</fullName>
        <description>For reporting.</description>
        <formula>IF(ISPICKVAL(StageName, &quot;Closed Lost&quot;), ARR__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <description>Recurring Amount divided by the number of Contract Months in the term.</description>
        <formula>Recurring_Total__c/Contract_Months__c</formula>
        <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_ARR__c</fullName>
        <description>For reporting.</description>
        <formula>IF(ISPICKVAL(Type, &quot;New Business&quot;), ARR__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Changed_Date__c</fullName>
        <description>The date Next Steps were last changed.</description>
        <label>Next Steps Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Flag__c</fullName>
        <description>Visual flag for identifying stale next steps. Expectation is that a deal should go no more than 7 days without an update. More than 10 days is the next flag tier.</description>
        <formula>IF(IsClosed,
&quot;-Closed-&quot;,
IF(
OR(
Days_Since_Next_Steps_Updated__c &gt;10,
ISBLANK(Next_Steps_Changed_Date__c)
),
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;img/msg_icons/error16.png&quot;,&quot;&gt; 10 Days&quot;),
IF(
Days_Since_Next_Steps_Updated__c &gt;7,
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;img/msg_icons/warning16.png&quot;,&quot;&gt; 7 Days&quot;),
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;img/msg_icons/confirm16.png&quot;,&quot;Up to Date&quot;)
)))</formula>
        <inlineHelpText>Red = Not Updated in 10 Days |
Yellow = Not Updated in 7 Days |
Green = Updated in last 7 Days</inlineHelpText>
        <label>Next Steps Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>For the Opportunity owner to specify what they&apos;re doing next with the deal. Creates visibility for managers to understand what&apos;s happening.</description>
        <inlineHelpText>What are your next steps with this Opportunity?</inlineHelpText>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <description>Indicates the number of intervals the client will be billed.</description>
        <inlineHelpText>How many payments will the client&apos;s contract be broken up into?</inlineHelpText>
        <label>Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Fee_Total__c</fullName>
        <description>Roll up of the total price of all the product line items where Revenue Type = One Time Fee.</description>
        <inlineHelpText>The amount of revenue in this deal that is a one time fee (integration work).</inlineHelpText>
        <label>One Time Fee Total</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>One Time Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OppAccountOwnerMismatch__c</fullName>
        <description>Returns true if the opportunity owner does not match the account owner.</description>
        <formula>IF(Account.OwnerId != OwnerId, TRUE, FALSE)</formula>
        <label>OppAccountOwnerMismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Counter__c</fullName>
        <description>For reporting. Look up &quot;Power of One&quot; Salesforce articles.</description>
        <formula>1</formula>
        <label>Opportunity Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Export_Sync__c</fullName>
        <inlineHelpText>Select N/A if Full Integration.</inlineHelpText>
        <label>Order Export Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Order Export</fullName>
                </value>
                <value>
                    <fullName>Order Export w/o FTP</fullName>
                </value>
                <value>
                    <fullName>Custom Order Export</fullName>
                    <isActive>false</isActive>
                    <label>Custom Order Export</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_QTR_Goal__c</fullName>
        <formula>Owner.Quarter_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner QTR Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>Pulls the region from the User the Opportunity Owner is referencing. For displaying on page layouts and usage in reports.</description>
        <formula>TEXT(Owner.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_YR_Goal__c</fullName>
        <formula>Owner.Year_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner YR Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pilot_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pilot Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Pilot Account)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pilot_Target_Due_Date__c</fullName>
        <description>Indicates the targeted completion of the pilot.</description>
        <inlineHelpText>When is the pilot expected to be done?</inlineHelpText>
        <label>Pilot Target Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pilot__c</fullName>
        <description>Specifies whether or not the client is on a Pilot.</description>
        <inlineHelpText>Is this a Pilot deal?</inlineHelpText>
        <label>Pilot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Matrix_Annual_Fee_Number__c</fullName>
        <description>Takes inputs from the Pricing Matrix fields and returns a number that will correspond with the suggested price.</description>
        <formula>STOCKISTS_Number__c
+ SEASONS_Number__c
+ VOLUME_Number__c
+ USERS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Matrix Annual Fee Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Icon__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSHk&quot;, &quot;Products&quot;)</formula>
        <label>Product Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Total__c</fullName>
        <description>Roll up of the total price of all the product line items where Revenue Type = Recurring Revenue.</description>
        <inlineHelpText>The amount of revenue in this deal that is recurring.</inlineHelpText>
        <label>Recurring Total</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>Recurring Revenue</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_ARR__c</fullName>
        <description>For reporting.</description>
        <formula>IF(ISPICKVAL(Type, &quot;Renewal&quot;), ARR__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Price_Increase__c</fullName>
        <description>The renewal price increase specified in the contract. Increases the value of renewal opportunities created from opportunities with a value in this field.</description>
        <inlineHelpText>The contracted price increase % at renewal.</inlineHelpText>
        <label>Renewal Price Increase %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Target_List__c</fullName>
        <label>Retail Target List?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEASONS_Number__c</fullName>
        <label>SEASONS Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STOCKISTS_Number__c</fullName>
        <label>STOCKISTS Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity_ARR__c</fullName>
        <description>Stamped by Process Builder workflow at all times to keep the current renewal in sync with the Source Opportunity&apos;s ARR. Cannot calculate delta between current and Source Opportunity ARR with a formula due to a compiling limit; this allows for that calculation since it&apos;s being stamped as static data on the current Opportunity.</description>
        <label>Source Opportunity ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity_End_Date__c</fullName>
        <description>The Contract End Date from the Source Opportunity. To help ensure contracts are continuous.</description>
        <formula>Source_Opportunity__r.Contract_End_Date__c</formula>
        <inlineHelpText>The Contract Start Date should be the day after this date.</inlineHelpText>
        <label>Source Opportunity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity_Price_Increase__c</fullName>
        <description>The price increase in the contract from the source opportunity. Applies to the current opportunity.</description>
        <formula>Source_Opportunity__r.Renewal_Price_Increase__c</formula>
        <inlineHelpText>Price increase % in the contract.</inlineHelpText>
        <label>Source Opportunity Price Increase %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The won Opportunity that created this Renewal. Used to compare contract values for upsell/downsell calculation.</description>
        <inlineHelpText>The won Opportunity prior to this Opportunity.</inlineHelpText>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Changed_Date__c</fullName>
        <description>The date the Stage last changed. Updated automatically via workflow full.</description>
        <inlineHelpText>The last time the Stage changed.</inlineHelpText>
        <label>Stage Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Style_Sync__c</fullName>
        <inlineHelpText>Select N/A if Full Integration.</inlineHelpText>
        <label>Style Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Style Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCV_Weighted__c</fullName>
        <description>TCV weighted based on stage probability.</description>
        <formula>Amount*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Testing_Target_Due_Date__c</fullName>
        <description>Indicates when testing is targeted to be complete.</description>
        <inlineHelpText>When is testing expected to be done?</inlineHelpText>
        <label>Testing Target Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transactional_Products_Included__c</fullName>
        <description>Used to flag transactional product opportunities in order to create Renewals even though it&apos;s not technically recurring revenue. Values will fluctuate during each transactional period, but no churn will be accounted for as the revenue will be reported as part of the One Time Fee revenue.</description>
        <label>Transactional Products Included</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transactional_Total__c</fullName>
        <description>Roll up of the total price of all the product line items where Revenue Type = Transactional.</description>
        <inlineHelpText>The amount of revenue in this deal that is transactional.</inlineHelpText>
        <label>Transactional Total</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[DO NOT USE] Used to first 90 days before renewal start date for all existing records when SFDc was launched.</description>
        <inlineHelpText>DO NOT USE</inlineHelpText>
        <label>Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USERS_Number__c</fullName>
        <label>USERS Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Downsell_ARR__c</fullName>
        <description>Calculated the change in ARR between the current and previous Opportunity (Contract). Source Opportunity ARR stamped regularly by Process Builder workflow to keep the two Opportunities in sync.</description>
        <formula>ARR__c-Source_Opportunity_ARR__c</formula>
        <inlineHelpText>Positive number indicates an Upsell in ARR
Negative number indicates a Downsell in ARR</inlineHelpText>
        <label>Upsell/Downsell ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VOLUME_Number__c</fullName>
        <label>VOLUME Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wholesale_VOLUME__c</fullName>
        <label>Wholesale VOLUME</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 5M</fullName>
                </value>
                <value>
                    <fullName>5 to 10M</fullName>
                </value>
                <value>
                    <fullName>11 to 20M</fullName>
                </value>
                <value>
                    <fullName>21 to 30M</fullName>
                </value>
                <value>
                    <fullName>31 to 50M</fullName>
                </value>
                <value>
                    <fullName>50M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_ARR__c</fullName>
        <description>For reporting.</description>
        <formula>IF(IsWon, ARR__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_TCV__c</fullName>
        <description>For reporting.</description>
        <formula>IF(IsWon, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Brands_Retailers_Attached__c</fullName>
        <description>Roll up summary counting how many brands or retailers are getting the services in the contract.</description>
        <inlineHelpText>The number of brands or retailers associated with this opportunity (those receiving the services in the contract).</inlineHelpText>
        <label># of Brands/Retailers Attached</label>
        <summaryForeignKey>Brand_Retailer__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Product_Line_Items__c</fullName>
        <description>Roll up summary count of the number of product line items on the Opportunity.</description>
        <inlineHelpText>Number of Products added to the Opportunity.</inlineHelpText>
        <label># of Product Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_SEASONS_per_year__c</fullName>
        <label># of SEASONS per year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 2</fullName>
                </value>
                <value>
                    <fullName>3 to 4</fullName>
                </value>
                <value>
                    <fullName>4 to 6</fullName>
                </value>
                <value>
                    <fullName>7+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_STOCKISTS__c</fullName>
        <label># of STOCKISTS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 100</fullName>
                </value>
                <value>
                    <fullName>101 to 200</fullName>
                </value>
                <value>
                    <fullName>201 to 350</fullName>
                </value>
                <value>
                    <fullName>351 to 500</fullName>
                </value>
                <value>
                    <fullName>501+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_USERS__c</fullName>
        <label># of USERS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 5</fullName>
                </value>
                <value>
                    <fullName>6 to 10</fullName>
                </value>
                <value>
                    <fullName>11 to 20</fullName>
                </value>
                <value>
                    <fullName>21 to 50</fullName>
                </value>
                <value>
                    <fullName>51+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Open_New_Business_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Champion__c</columns>
        <columns>Champion_Authority__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Decision_Maker_Authority__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Business</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open New Business Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Partnership_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Champion__c</columns>
        <columns>Champion_Authority__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Decision_Maker_Authority__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnership</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Partnership Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Renewal_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>At_Risk__c</columns>
        <columns>At_Risk_Flag__c</columns>
        <columns>At_Risk_Notes__c</columns>
        <columns>Champion__c</columns>
        <columns>Champion_Authority__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Decision_Maker_Authority__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Renewal Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
</CustomObject>